refactor: move some code in initFramework to specific methods